@@ -5,6 +5,9 @@ NEWS for the OpenCL package
 	on retrieval. Fixed with larger static buffer.
 	(Thanks to Valerio Aimale again)
 
+    o	Improve error reporting by always including the OpenCL
+	error code
+
 
 0.1-3	2012-05-25
     o	fix a bug causing device enumeration to use the default
